--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,18 +44,20 @@ dependencies {
     def supportVersion = '28.0.0'
     def retrofitVersion = '2.8.1'
     def glideVersion = '4.11.0'
-    def rxJavaVersion = '2.2.8'
+    def rxJavaVersion = '2.2.10'
     def rxAndroidVersion = '2.1.1'
     def roomVersion = '2.2.5'
-    def navVersion = '2.3.0'
+    def navVersion = '2.3.1'
     def preference_version = "1.1.1"
+    def picasso_version="2.4.0"
+
 
     implementation "android.arch.lifecycle:extensions:$lifeCycleExtensionVersion"
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -66,7 +68,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "com.android.support:design:$supportVersion"
     implementation "androidx.preference:preference-ktx:$preference_version"
-
+    implementation "com.squareup.picasso:picasso:$picasso_version"
 
 
 
